@@ -1,4 +1,4 @@
-name    = Net-Statsd-Tiny
+name    = Net-Statsd-Lite
 author  = Robert Rothenberg <rrwo@cpan.org>
 license = Artistic_2_0
 copyright_holder = Robert Rothenberg
@@ -28,7 +28,7 @@ type = requires
 type = recommends
 
 [GitHub::Meta]
-repo = git://github.com/robrwo/Net-Statsd-Tiny.git
+repo = git://github.com/robrwo/Net-Statsd-Lite.git
 
 [PodWeaver]
 [ReadmeAnyFromPod]
@@ -72,7 +72,7 @@ critic_config = t/etc/perlcritic.rc
 
 [Test::Pod::Coverage::Configurable]
 also_private = qr/^DEMOLISH$/
-skip = Net::Statsd::Tiny::Types
+skip = Net::Statsd::Lite::Types
 [Test::Pod::LinkCheck]
 [Test::Portability]
 ; authordep Test::TrailingSpace
